[package]
name = "mdbook-codetags"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = [ "cargo" ] }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
mdbook = "0.4.52"
regex = "1.11.1"
semver = "1.0.26"
serde_json = "1.0.142"
toml = "0.5.11"
walkdir = "2.5.0"
